--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                     </div>
                 </div>
                 <div class="left-card-middle">
-                    <img src="./images/g1.png" alt="">
+                    <div>
+                        <img src="./images/g1.png" alt="">
+                    </div>
                 </div>
                 
                 <div class="card-footer">
@@ -73,7 +75,9 @@
                 <div class="right-lower">
                     <div class="lower-left">
                         <div class="card-3-img">
-                            <img src="./Images/g3.png" alt="">
+                            <div>
+                                <img src="./Images/g3.png" alt="">
+                            </div>
                         </div>
                         <div class="card-title">
                             <div class="card-3-mid">
@@ -99,9 +103,11 @@
                     <div class="lower-right">
                         <div class="card-4">
                             <div class="lower-card-header">
-                                <p><span class="title-border">EUROPEANA</span></p>
+                                <p style="height: 0;"><span class="title-border">EUROPEANA</span></p>
                                 <div class="lower-card-img">
-                                    <img src="./Images/g4.png" alt="">
+                                    <div>
+                                        <img src="./Images/g4.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                             <div class="rich-text lower-card-content">
